--- a/nikolatest1/blog2/output/archive.html
+++ b/nikolatest1/blog2/output/archive.html
@@ -33,8 +33,8 @@ bg-dark
 
         <div class="collapse navbar-collapse" id="bs-navbar">
             <ul class="navbar-nav mr-auto">
-<li class="nav-item active">
-<a href="#" class="nav-link">Archive <span class="sr-only">(active)</span></a>
+<li class="nav-item">
+<a href="research" class="nav-link">Research</a>
                 </li>
 <li class="nav-item">
 <a href="categories/" class="nav-link">Tags</a>
@@ -43,7 +43,7 @@ bg-dark
 <a href="publications" class="nav-link">Publications</a>
                 </li>
 <li class="nav-item">
-<a href="contact/" class="nav-link">Contact</a>
+<a href="contact" class="nav-link">Contact</a>
 
                 
             </li>
