--- a/nikolatest1/blog2/output/pages/social_buttons/index.html
+++ b/nikolatest1/blog2/output/pages/social_buttons/index.html
@@ -57,16 +57,16 @@ bg-dark
         <div class="collapse navbar-collapse" id="bs-navbar">
             <ul class="navbar-nav mr-auto">
 <li class="nav-item">
-<a href="../../archive.html" class="nav-link">Archive</a>
+<a href="research" class="nav-link">Research</a>
                 </li>
 <li class="nav-item">
-<a href="../../categories/" class="nav-link">Tags</a>
+<a href="categories/" class="nav-link">Tags</a>
                 </li>
 <li class="nav-item">
 <a href="publications" class="nav-link">Publications</a>
                 </li>
 <li class="nav-item">
-<a href="../../contact/" class="nav-link">Contact</a>
+<a href="contact" class="nav-link">Contact</a>
 
                 
             </li>
