--- a/nikolatest1/blog2/output/pages/quickstart/index.html
+++ b/nikolatest1/blog2/output/pages/quickstart/index.html
@@ -55,10 +55,13 @@ bg-dark
         <div class="collapse navbar-collapse" id="bs-navbar">
             <ul class="navbar-nav mr-auto">
 <li class="nav-item">
+<a href="index" class="nav-link">Home</a>
+                </li>
+<li class="nav-item">
 <a href="research" class="nav-link">Research</a>
                 </li>
 <li class="nav-item">
-<a href="categories/" class="nav-link">Tags</a>
+<a href="people" class="nav-link">People</a>
                 </li>
 <li class="nav-item">
 <a href="publications" class="nav-link">Publications</a>
