--- a/nikolatest1/blog2/output/pages/listings-demo/index.html
+++ b/nikolatest1/blog2/output/pages/listings-demo/index.html
@@ -51,7 +51,7 @@ bg-dark
         <div class="collapse navbar-collapse" id="bs-navbar">
             <ul class="navbar-nav mr-auto">
 <li class="nav-item">
-<a href="index" class="nav-link">Home</a>
+<a href="../" class="nav-link">Home</a>
                 </li>
 <li class="nav-item">
 <a href="research" class="nav-link">Research</a>
