--- a/nikolatest1/blog2/output/archive.html
+++ b/nikolatest1/blog2/output/archive.html
@@ -34,13 +34,10 @@ bg-dark
         <div class="collapse navbar-collapse" id="bs-navbar">
             <ul class="navbar-nav mr-auto">
 <li class="nav-item">
-<a href="." class="nav-link">Home</a>
-                </li>
-<li class="nav-item">
 <a href="research" class="nav-link">Research</a>
                 </li>
 <li class="nav-item">
-<a href="people" class="nav-link">People</a>
+<a href="people/" class="nav-link">People</a>
                 </li>
 <li class="nav-item">
 <a href="publications" class="nav-link">Publications</a>
