--- a/dr-nikolas-vendetta/index.html
+++ b/dr-nikolas-vendetta/index.html
@@ -116,7 +116,7 @@ bg-dark
         <div class="collapse navbar-collapse" id="bs-navbar">
             <ul class="navbar-nav mr-auto">
 <li class="nav-item">
-<a href="../index.html" class="nav-link">HomeResearch</a>
+<a href="../index.html" class="nav-link">Home</a>
                 </li>
 <li class="nav-item">
 <a href="../people/index.html" class="nav-link">People</a>
