--- a/nikolatest1/blog2/output/galleries/demo/index.html
+++ b/nikolatest1/blog2/output/galleries/demo/index.html
@@ -54,6 +54,9 @@ bg-dark
 <a href="../../index.html" class="nav-link">Home</a>
                 </li>
 <li class="nav-item">
+<a href="../../research/" class="nav-link">Research</a>
+                </li>
+<li class="nav-item">
 <a href="../../people/index.html" class="nav-link">People</a>
                 </li>
 <li class="nav-item">
