--- a/people/index.html
+++ b/people/index.html
@@ -49,6 +49,9 @@ bg-dark
 <a href="../index.html" class="nav-link">Home</a>
                 </li>
 <li class="nav-item">
+<a href="../research/" class="nav-link">Research</a>
+                </li>
+<li class="nav-item">
 <a href="#" class="nav-link">People</a>
                 </li>
 <li class="nav-item">
