--- a/contact/index.html
+++ b/contact/index.html
@@ -55,8 +55,8 @@ bg-dark
 <li class="nav-item">
 <a href="../publications/" class="nav-link">Publications</a>
                 </li>
-<li class="nav-item">
-<a href="../contact" class="nav-link">Contact</a>
+<li class="nav-item active">
+<a href="." class="nav-link">Contact <span class="sr-only">(active)</span></a>
 
                 
             </li>
