--- a/publications/index.html
+++ b/publications/index.html
@@ -55,7 +55,7 @@ bg-dark
 <a href="." class="nav-link">Publications <span class="sr-only">(active)</span></a>
                 </li>
 <li class="nav-item">
-<a href="../contact" class="nav-link">Contact</a>
+<a href="../contact/" class="nav-link">Contact</a>
 
                 
             </li>
