--- a/quickstart/index.html
+++ b/quickstart/index.html
@@ -69,7 +69,7 @@ bg-dark
 <a href="../publications/" class="nav-link">Publications</a>
                 </li>
 <li class="nav-item">
-<a href="../contact" class="nav-link">Contact</a>
+<a href="../contact/" class="nav-link">Contact</a>
 
                 
             </li>
