--- a/third-page/index.html
+++ b/third-page/index.html
@@ -54,7 +54,7 @@ bg-dark
 <a href="../publications/" class="nav-link">Publications</a>
                 </li>
 <li class="nav-item">
-<a href="../contact" class="nav-link">Contact</a>
+<a href="../contact/" class="nav-link">Contact</a>
 
                 
             </li>
